Polish 'Add Pulsar ConnectionDetails support'
See gh-37197