@@ -277,5 +277,4 @@ tasks.named("checkSpringConfigurationMetadata").configure {
 
 test {
 	jvmArgs += "--add-opens=java.base/java.net=ALL-UNNAMED"
-	jvmArgs += "--add-opens=java.base/sun.net=ALL-UNNAMED"
 }
